# advent-of-code

./: README.md
2025/rust/: Cargo.toml  justfile
2025/rust/day-01/: Cargo.toml
2025/rust/day-01/src/: part1.pest  part1.rs  part2.rs
2025/rust/day-02/: Cargo.toml
2025/rust/day-02/src/: parse.pest  part1.rs  part2.rs
2025/rust/scripts/: get-aoc-input.rs
